# ASR

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/routers/: transcribe.py
app/services/: asr_client.py  session_store.py  transcript_merge.py
app/utils/: audio.py
static/: app.js  index.html  style.css
