[project]
name = "asr"
version = "0.1.0"
description = "AutoGLM ASR Web Client"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["static*"]
